[package]
name = "intellegen-http-defender"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"

[features]
default = []
redis-storage = ["redis"]

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# HTTP server
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.19", features = ["full", "tokio", "server-auto"] }
http-body-util = "0.1.3"
thiserror = "2.0.18"
async-trait = "0.1"
dashmap = "6.1"
redis = { version = "1.0.3", features = ["aio", "tokio-comp"], optional = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenvy = "0.15"
bytes = "1.11.1"

# Challenge-response (PoW)
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
temp-env = "0.3"
